# amazonq-customizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
amazonq_customizer/: check_cmd.py  convert_cmd.py  init_cmd.py  main.py  templates.py
docs/plans/: 2026-04-23-dependency-locking-design.md
docs/superpowers/plans/: 2026-04-19-amazonq-customizer.md
docs/superpowers/specs/: 2026-04-19-amazonq-customizer-design.md
prompts/: java:change-review.md  java:clean-code.md  java:code-review.md  java:concurrency-review.md  java:design-patterns.md  java:performance-smell-detection.md  java:pr-review.md  java:security-audit.md  java:solid-principles.md  java:spring-boot-patterns.md  java:test-quality.md  superpowers:brainstorming.md  superpowers:executing-plans.md  superpowers:receiving-code-review.md  superpowers:requesting-code-review.md  superpowers:systematic-debugging.md  superpowers:verification-before-completion.md  superpowers:writing-plans.md
src/amazonq_customizer/: check_cmd.py  init_cmd.py  main.py
tests/: test_check_cmd.py  test_convert_cmd.py  test_init_cmd.py  test_main.py  test_templates.py
