[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazonq-customizer"
version = "0.1.0"
description = "A CLI tool to customize Amazon Q"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
amazonq-customizer = "amazonq_customizer.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
