[build-system]
requires = ["setuptools==82.0.1", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "amazonq-customizer"
version = "0.1.0"
description = "A CLI tool to customize Amazon Q"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer==0.23.2",
]

[project.scripts]
amazonq-customizer = "amazonq_customizer.main:app"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
